--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,23 @@
 
-<div>
+<div style="text-align:center;">
 <webcam [height]="400" 
         [width]="1000" 
         [trigger]="triggerObservable"
             (imageCapture)="handleImage($event)">
  </webcam>
-
-
- <!-- <webcam (initError)="handleInitError($event)"></webcam> -->
-
- <button class="actionBtn" (click)="triggerSnapshot();">
+<br>
+ <button class="actionBtn"  (click)="triggerSnapshot();">
   Click Here and take the Shot</button>
 
 <div class="snapshot" *ngIf="webcamImage">
 <h2>Here is your image!</h2>
-<img [src]="webcamImage.imageAsDataUrl"/>
+<img name="image" [src]="webcamImage.imageAsDataUrl"/>
 
 </div>
 
 <div style="text-align:center;margin-top: 200px;" >
-  <button (click)="initiateRecording()" class="btn btn-primary" *ngIf="!recording" style="cursor: pointer;background-color: green;color: white;font-size: 40px;"> Start Recording </button>
-  <button (click)="stopRecording()" class="btn btn-danger" *ngIf="recording" style="cursor: pointer;background-color: red;color: white;font-size: 40px;"> Stop Recording </button>
+  <button (click)="uploadimage()" *ngIf="!recording" > Start Recording </button>
+  <button (click)="stopRecording()" *ngIf="recording" > Stop Recording </button>
   <audio controls="" *ngIf="url">
   <source [src]="sanitize(url)" type="audio/wav">
   </audio>
